Fix spacing

--- a/client/src/components/App/App.css
+++ b/client/src/components/App/App.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700,800');
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800');
+@import url("https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700,800");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800");
 
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Montserrat', sans-serif;
-  text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
+  font-family: "Montserrat", sans-serif;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004);
   text-rendering: optimizeLegibility !important;
   -webkit-font-smoothing: antialiased !important;
   line-height: 1.6em;
@@ -21,8 +21,23 @@ h1 {
   box-sizing: border-box;
 }
 
-a
-{
+a {
   color: inherit;
-   text-decoration:none;
+  text-decoration: none;
+}
+
+:global(.container) {
+  padding: 0 40px;
+  max-width: 1024px;
+  margin: 0 auto;
+}
+
+@media (max-width: 600px) {
+  :global(.container) {
+    padding: 0 20px;
+  }
+}
+
+button:hover {
+  background-color: #efe8e8 !important;
 }
